refactor: unify code styles across app